--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -39,3 +39,7 @@ html {
 .sp-layout>:not(:first-child) {
   margin-top: 0px !important;
 }
+
+.sp-stack {
+  height: 100%;
+}
